update files  in keeping with homework 06-notehub-nextjs

--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -31,7 +31,11 @@
 }
 
 .active {
-  background-color: #0a66c2;
+  background-color: #0d6efd;
   color: white;
   font-weight: bold;
+}
+
+.active:hover {
+  background-color: #0b5ed7;
 }
