--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@ body {
   background-color: #f8f9fa;
 }
 
+p.loading {
+  color: #444444;
+  text-align: center;
+}
+
 h1.not-found {
   font-size: 36px;
   font-weight: 700;
